prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/id_is_not_const.nut
// EXPECT_ERROR: "is not a compile-time constant"
local y = 5
const BAD = y
